--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
             </div>
             
             <div class="text-wrapper">
-              <p class="profile-name">Santino Muñoz</p>
+              <p class="profile-name">{{userName | titlecase}}</p>
               <div>
                 <small class="designation text-muted">Gerente</small>
               </div>
